# haskell-dev-template

./: default.nix  haskell-dev-template.cabal  shell.nix
nix/: sources.json
src/: Hello.hs  Main.hs
test/: HelloSpec.hs
