cabal-version:       2.4
name:                haskell-dev-template
version:             0.1.0.0
license:             ISC
build-type:          Simple

library hello-lib
  hs-source-dirs: src
  exposed-modules: Hello
  build-depends: base >=4.13

executable hello
  main-is:             src/Main.hs
  build-depends:       hello-lib, base >=4.13
  default-language:    Haskell2010
