cabal-version:       2.4
name:                haskell-dev-template
version:             0.1.0.0
license:             ISC
build-type:          Simple

common shared-props
  default-language:       Haskell2010
  build-depends:          base >=4.13

library hello-lib
  import:                 shared-props
  hs-source-dirs:         src
  exposed-modules:        Hello

test-suite hello-spec
  import:               shared-props
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              HelloSpec.hs
  build-depends:        hello-lib, hspec >=2.10


executable hello
  import:               shared-props
  main-is:              src/Main.hs
  build-depends:        hello-lib
